--- a/tmf676/pom.xml
+++ b/tmf676/pom.xml
@@ -1,9 +1,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>3.1.3</version>
+        <relativePath/> <!-- lookup parent from repository -->
+    </parent>
+
     <groupId>com.odac</groupId>
-    <artifactId>paymentmgmt-svc</artifactId>
+    <artifactId>odac-ri-tmf676</artifactId>
     <packaging>jar</packaging>
-    <name>paymentmgmt-svc</name>
+    <name>odac-ri-tmf676</name>
     <version>4.0.0</version>
     <properties>
         <java.version>17</java.version>
@@ -13,12 +21,6 @@
         <springdoc.version>2.2.0</springdoc.version>
         <swagger-ui.version>5.3.1</swagger-ui.version>
     </properties>
-    <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.1.3</version>
-        <relativePath/> <!-- lookup parent from repository -->
-    </parent>
 
     <repositories>
         <repository>
@@ -95,6 +97,18 @@
         </dependency>
 
 <!-- Custom added classes BEGIN -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+
+        <!-- Local SDK Repository -->
+		<dependency>
+			<groupId>com.odac</groupId>
+			<artifactId>odac-sdk-tmf676</artifactId>
+			<version>4.0.0</version>
+		</dependency>
+
         <!-- https://mvnrepository.com/artifact/com.redis.om/redis-om-spring -->
         <dependency>
             <groupId>com.redis.om</groupId>
